Reajuste de index.html

--- a/index.html
+++ b/index.html
@@ -97,8 +97,18 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Arcanix · Software para seguridad privada",
+        "alternateName": "Arcanix",
+        "url": "https://arcanix.com.mx/"
+      }
+    </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
         "@type": "SoftwareApplication",
-        "name": "Arcanix – Sistema para empresas de seguridad privada",
+        "name": "Sistema para empresas de seguridad privada | Arcanix",
         "operatingSystem": "Web",
         "applicationCategory": "BusinessApplication",
         "offers": {
@@ -106,7 +116,7 @@
           "price": "10000",
           "priceCurrency": "MXN"
         },
-        "url": "https://arcanix.com.mx",
+        "url": "https://arcanix.com.mx/",
         "description": "Software para seguridad privada, instalable sin mensualidades que centraliza guardias, finanzas, almacén, vehículos y reportes. Incluye código fuente, personalización de colores y logotipo. Demo gratuita.",
         "screenshot": "https://arcanix.com.mx/logo.png"
       }
